# hello-sokol

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  triangle.cpp
cmake/: Config.cmake  Fmt.cmake  Sokol.cmake  Standard.cmake
glad/: CMakeLists.txt
